--- a/ww_heatmap.html
+++ b/ww_heatmap.html
@@ -53,6 +53,9 @@
         var treatmentplantsLayerGrid = L.mapbox.gridLayer('moonbrandy.WW_treatmentplants').addTo(map);
           L.mapbox.gridControl(treatmentplantsLayerGrid).addTo(map);
 
+        var lateralLayerGrid = L.mapbox.gridLayer('moonbrandy.WW_laterals').addTo(map);
+          L.mapbox.gridControl(lateralLayerGrid).addTo(map);
+
 
         
 
