--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
       <p></p>
     </div>
     <div class="col-sm-4">
+      <h3><a href="http://moonbrandy.github.io/WCC_Heatmap/ww_lateral"> Link to Lateral Map</a></h3>
+      <p>Lateral map for waste water. </p>
+      <p></p>
+    </div>
+    <div class="col-sm-4">
       <h3><a href="http://moonbrandy.github.io/WCC_Heatmap/sw_heatmap"> Link to Storm Water Heat Map</a></h3>
       <p>Heat map for storm water. </p>
       <p></p>
