--- a/index.html
+++ b/index.html
@@ -24,30 +24,30 @@
   <div class="row">
     <div class="col-sm-4">
       <h3><a href="http://moonbrandy.github.io/WCC_Heatmap/ww_heatmap"> Link to Waste Water Heat Map</a></h3>
-      <p>Heat map for waste water. </p>
-      <p></p>
+      <h5>Heat map for waste water. </h5>
+      <p>Use the tool box on the top right hand side to change layers, legend and discriptions are on the bottom left hand side. Feel free to use the mini-map on bottom right hand side to navigate the map. Use mouse scroll to zoom in or zoom out.</p>
     </div>
     <div class="col-sm-4">
       <h3><a href="http://moonbrandy.github.io/WCC_Heatmap/ww_lateral"> Link to Lateral Map</a></h3>
-      <p>Lateral map for waste water. </p>
-      <p></p>
+      <h5>Lateral map for waste water. </h5>
+      <p>Use the tool box on the top right hand side to change layers, legend and discriptions are on the bottom left hand side. Feel free to use the mini-map on bottom right hand side to navigate the map. Use mouse scroll to zoom in or zoom out.</p>
     </div>
     <div class="col-sm-4">
       <h3><a href="http://moonbrandy.github.io/WCC_Heatmap/sw_heatmap"> Link to Storm Water Heat Map</a></h3>
-      <p>Heat map for storm water. </p>
-      <p></p>
+      <h5>Heat map for storm water. </h5>
+      <p>Use the tool box on the top right hand side to change layers, legend and discriptions are on the bottom left hand side. Feel free to use the mini-map on bottom right hand side to navigate the map. Use mouse scroll to zoom in or zoom out.</p>
     </div>
     <div class="col-sm-4">
       <h3><a href="http://moonbrandy.github.io/WCC_Heatmap/combine_heatmap"> Link to Multiple Layer Heat Map</a></h3>        
-      <p>Heat map that combines waste water and storm water.</p>
-      <p></p>
+      <h5>Heat map that combines waste water and storm water.</h5>
+      <p>Use the tool box on the top right hand side to change layers, legend and discriptions are on the bottom left hand side. Feel free to use the mini-map on bottom right hand side to navigate the map. Use mouse scroll to zoom in or zoom out.</p>
     </div>
   </div>
   <div class="row">
     <div class="col-sm-4">
       <h3><a href="http://moonbrandy.github.io/WCC_Housing"> Link to Housing Tree Map</a></h3>        
-      <p>Tree map for housing project</p>
-      <p></p>
+      <h5>Tree map for housing project</h5>
+      <p>Use the tool box on the top right hand side to change layers, legend and discriptions are on the bottom left hand side. Feel free to use the mini-map on bottom right hand side to navigate the map. Use mouse scroll to zoom in or zoom out.</p>
     </div>
   </div>
 </div>
