--- a/index.html
+++ b/index.html
@@ -16,9 +16,29 @@
   </div>
   <div class="row">
     <div class="col-sm-4">
-      <h3><a href="http://www.harmonic.co.nz"> Harmonic</a></h3>
-      <p>Harmonic Analytics Home Page</p>
-      <p>Please contact us if you have any analytics challenge.</p>
+      <h3><a href="http://moonbrandy.github.io/WCC_Heatmap/transport"> Link to Closest Distance to Transports Heat Map</a></h3>
+      <h5>Heat map for closest distance to a transport asset </h5>
+      <p>Use the tool box on the top right hand side to change layers, legend and discriptions are on the bottom left hand side. Feel free to use the mini-map on bottom right hand side to navigate the map. Use mouse scroll to zoom in or zoom out.</p>
+    </div>
+    <div class="col-sm-4">
+      <h3><a href="http://moonbrandy.github.io/WCC_Heatmap/park"> Link to Closest Distance to Park Heat Map</a></h3>
+      <h5>Heat map for closest distance to a park. </h5>
+      <p>Use the tool box on the top right hand side to change layers, legend and discriptions are on the bottom left hand side. Feel free to use the mini-map on bottom right hand side to navigate the map. Use mouse scroll to zoom in or zoom out.</p>
+    </div>
+    <div class="col-sm-4">
+      <h3><a href="http://moonbrandy.github.io/WCC_Heatmap/school"> Link to Closest Distance to School Heat Map</a></h3>
+      <h5>Heat map for closest distance to a school. </h5>
+      <p>Use the tool box on the top right hand side to change layers, legend and discriptions are on the bottom left hand side. Feel free to use the mini-map on bottom right hand side to navigate the map. Use mouse scroll to zoom in or zoom out.</p>
+    </div>
+    <div class="col-sm-4">
+      <h3><a href="http://moonbrandy.github.io/WCC_Heatmap/medical"> Link to Closest Distance to Medical Center Heat Map</a></h3>
+      <h5>Heat map for closest distance to a medical center. </h5>
+      <p>Use the tool box on the top right hand side to change layers, legend and discriptions are on the bottom left hand side. Feel free to use the mini-map on bottom right hand side to navigate the map. Use mouse scroll to zoom in or zoom out.</p>
+    </div>
+    <div class="col-sm-4">
+      <h3><a href="http://moonbrandy.github.io/WCC_Heatmap/sp"> Link to Closest Distance to Swimming Pool Heat Map</a></h3>
+      <h5>Heat map for closest distance to a swimming pool. </h5>
+      <p>Use the tool box on the top right hand side to change layers, legend and discriptions are on the bottom left hand side. Feel free to use the mini-map on bottom right hand side to navigate the map. Use mouse scroll to zoom in or zoom out.</p>
     </div>
   </div>
   <div class="row">
