--- a/park.html
+++ b/park.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>WCC Closest Distance to Park</title>
+    <title>Closest Distance to Green Sapces</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet-src.js"></script>
@@ -87,12 +87,11 @@
     <div id='legend' style='display:none;'>
   <strong>Distance (meter)</strong>
   <nav class='legend clearfix'>
-    <span style='background:#6e0b0b;'></span><label> &#60; 5% </label><br />
-    <span style='background:#fc0606;'></span><label>  5% - 25%   </label><br />
-    <span style='background:#fc8000;'></span><label> 25% - 50%  </label><br />
-    <span style='background:#ffdf02;'></span><label> 50% - 75%  </label><br />
-    <span style='background:#2af607;'></span><label> 75% - 95%  </label><br />
-    <span style='background:#053afa;'></span><label> &#62; 95%  </label><br />
+    <span style='background:#053afa;'></span><label> &#60; 100  </label><br />
+    <span style='background:#2af607;'></span><label> 100  - 200  </label><br />
+    <span style='background:#ffdf02;'></span><label> 200  - 400  </label><br />
+    <span style='background:#fc8000;'></span><label> 400  - 600  </label><br />
+    <span style='background:#fc0606;'></span><label> &#62; 600  </label><br />
     <small>Source: <a href="http://www.harmonic.co.nz">Harmonic</a></small>
 </div>
 
