--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
       <h5>Heat map for closest distance to a school. </h5>
       <p>Use the tool box on the top right hand side to change layers, legend and discriptions are on the bottom left hand side. Feel free to use the mini-map on bottom right hand side to navigate the map. Use mouse scroll to zoom in or zoom out.</p>
     </div>
+  </div>
+  <div class="row">
     <div class="col-sm-4">
       <h3><a href="http://moonbrandy.github.io/WCC_Heatmap/medical"> Closest Distance to Medical Services</a></h3>
       <h5>Heat map for closest distance to a medical center. </h5>
