--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
       <p>Use the tool box on the top right hand side to change layers, legend and discriptions are on the bottom left hand side. Feel free to use the mini-map on bottom right hand side to navigate the map. Use mouse scroll to zoom in or zoom out.</p>
     </div>
     <div class="col-sm-4">
+      <h3><a href="http://moonbrandy.github.io/WCC_Heatmap/pw_heatmap"> Link to Portable Water Heat Map</a></h3>
+      <h5>Heat map for portable water. </h5>
+      <p>Use the tool box on the top right hand side to change layers, legend and discriptions are on the bottom left hand side. Feel free to use the mini-map on bottom right hand side to navigate the map. Use mouse scroll to zoom in or zoom out.</p>
+    </div>
+    <div class="col-sm-4">
       <h3><a href="http://moonbrandy.github.io/WCC_Heatmap/ww_heatmap"> Link to Waste Water Heat Map</a></h3>
       <h5>Heat map for waste water. </h5>
       <p>Use the tool box on the top right hand side to change layers, legend and discriptions are on the bottom left hand side. Feel free to use the mini-map on bottom right hand side to navigate the map. Use mouse scroll to zoom in or zoom out.</p>
