--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <p>This is a navigation page for each interactive map.</p> 
   </div>
   <div class="row">
+  <h3>Distance</h3>
     <div class="col-sm-4">
       <h3><a href="http://moonbrandy.github.io/WCC_Heatmap/transport"> Closest Distance to Public Transports</a></h3>
       <h5>Heat map for closest distance to a transport asset </h5>
@@ -32,6 +33,7 @@
     </div>
   </div>
   <div class="row">
+  <h3>WCC - 3 waters</h3>
     <div class="col-sm-4">
       <h3><a href="http://moonbrandy.github.io/WCC_Heatmap/medical"> Closest Distance to Medical Services</a></h3>
       <h5>Heat map for closest distance to a medical center. </h5>
@@ -76,6 +78,7 @@
     </div>
   </div>
   <div class="row">
+  <h3>WCC - Housing</h3>
     <div class="col-sm-4">
       <h3><a href="http://moonbrandy.github.io/WCC_Housing"> Link to Housing Tree Map</a></h3>        
       <h5>Tree map for housing project</h5>
