--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <p>This is a navigation page for each interactive map.</p> 
   </div>
   <div class="row">
-  <h3>Distance</h3>
+  <h3>WCC - Distance</h3>
     <div class="col-sm-4">
       <h3><a href="http://moonbrandy.github.io/WCC_Heatmap/transport"> Closest Distance to Public Transports</a></h3>
       <h5>Heat map for closest distance to a transport asset </h5>
