--- a/ww_karori_demo.html
+++ b/ww_karori_demo.html
@@ -39,7 +39,7 @@
         baseMap.addTo(map);
 
         var layerControl = L.control.layers({
-          'To Parks Distance': pipes.addTo(map)
+          'Karori': pipes.addTo(map)
           
         }, {
           'Karori Suburb': suburb.addTo(map)
