--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <h3>WCC - NCUA demo</h3>
     <div class="col-sm-4">
       <h3><a href="http://moonbrandy.github.io/WCC_Heatmap/ww_karori_demo"> Waste Water Karori Utilisation Heat Map</a></h3>
-      <h5>Heat map for transport assets. </h5>
+      <h5>Demo heat map for waste water utilisation in Karori only. </h5>
       <p>Use the tool box on the top right hand side to change layers, legend and discriptions are on the bottom left hand side. Feel free to use the mini-map on bottom right hand side to navigate the map. Use mouse scroll to zoom in or zoom out.</p>
     </div>
   </div>
