--- a/wcc_transport.html
+++ b/wcc_transport.html
@@ -102,7 +102,7 @@
 </style>
 
     <div id='legend' style='display:none;'>
-  <strong>Current Yield (Distribution by %)</strong>
+  <strong>Current Yield <br />(Distribution by %)</strong>
   <nav class='legend clearfix'>
     <span style='background:#053afa;'></span><label> &#60; 5%  </label><br />
     <span style='background:#2af607;'></span><label> 5%  - 25%  </label><br />
