--- a/sw_heatmap.html
+++ b/sw_heatmap.html
@@ -38,10 +38,10 @@
         baseMap.addTo(map);
 
         var layerControl = L.control.layers({
-          'Property': propLayer.addTo(map)
+          'Properties': propLayer.addTo(map)
           
         }, {
-          'Catchment': catchmentLayer.addTo(map)
+          'Suburbs': catchmentLayer.addTo(map)
         }
         ).addTo(map);
 
